--- a/css/style.css
+++ b/css/style.css
@@ -46,15 +46,21 @@ body {
 }
 
 .logo {
-    width: 50px; height: 10px
     display: flex;
     align-items: center;
     gap: 10px;
+    height: 50px; /* Фиксированная высота для логотипа */
 }
 
 .logo-icon {
     width: 50px; 
-    height: 10px;
+    height: 50px; /* Делаем высоту равной ширине для квадратного лого */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;    
+    object-fit: contain; /* Сохраняет пропорции, помещая изображение в контейнер */
+    object-position: center; /* Центрируем изображение *//* Обрезаем всё, что выходит за границы */
 }
 
 .nav-menu {
