--- a/css/style.css
+++ b/css/style.css
@@ -62,10 +62,11 @@ body {
     height: 100%; /* Занимает всю высоту контейнера */
     object-fit: contain; /* Сохраняет пропорции */
 }
+
 .logo-text {
-    font-size: 95px;
+    font-size: 20px;
     font-weight: bold;
-    color: #000000; /* или нужный вам цвет */
+    color: #ffffff; /* или нужный вам цвет */
     font-family: Arial, sans-serif; /* или нужный шрифт */
 }
 
